--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,6 @@
   --dark-grey: rgb(61, 61, 61);
   --medium-grey: rgb(122, 122, 122);
   --light-grey: rgb(183, 183, 183);
-  --transition-duration: 0.1s;
 
   --background: var(--white);
   --primary-foreground: var(--black);
@@ -21,7 +20,13 @@
     --primary-foreground: var(--white);
     --secondary-foreground: var(--light-grey);
   }
+
+  /* Lower brightness on images in dark mode */
+  img {
+    filter: brightness(.9) contrast(1.1);
+  }
 }
+
 
 * {
   box-sizing: border-box;
@@ -45,7 +50,6 @@ button {
   all: unset;
   cursor: pointer;
   color: var(--hover-color);
-  transition: color var(--transition-duration);
 }
 
 button:hover {
@@ -55,7 +59,6 @@ button:hover {
 a {
   text-decoration: none;
   color: var(--hover-color);
-  transition: color var(--transition-duration);
 }
 
 a:hover {
@@ -134,7 +137,7 @@ pre {
 img {
   display: block;
   margin: 20px auto;
-  max-width: 60%;
+  max-width: 70%;
 }
 
 ::-webkit-scrollbar {
